--- a/src/__map-site.html
+++ b/src/__map-site.html
@@ -24,7 +24,9 @@
 						<div class="sheet">
 							<div class="layout-article">
 								<!--breadcrumbs-->
-								@@include('_breadcrumbs.tpl')
+								@@include('_breadcrumbs.tpl', {
+									"last": "Карта сайта"
+								})
 								<!--breadcrumbs end-->
 								<h1>Карта сайта</h1>
 								<div class="layout-wide">
