--- a/src/_layout_header--ea.xhtml
+++ b/src/_layout_header--ea.xhtml
@@ -15,7 +15,9 @@
 			</div>
 			<div class="header__row">
 				<div class="header__cell">
-					@@include('_tpl_user-options.tpl')
+					@@include('_tpl_user-options.tpl', {
+						"site": "ea"
+					})
 				</div>
 			</div>
 			<div class="header__row header__row--arrow">
