--- a/src/automatic-catalog.html
+++ b/src/automatic-catalog.html
@@ -81,7 +81,7 @@
 										</div>
 									</div>
 								</a>
-								<a href="#" class="user-options__item">
+								<a href="automatic-basket.html" class="user-options__item">
 									<div class="user-options__inner">
 										<div class="user-option__icon">
 											<div class="basket-counter">1</div>
@@ -437,7 +437,7 @@
 							</div>
 						</div>
 					</a>
-					<a href="#" class="user-options__item">
+					<a href="automatic-basket.html" class="user-options__item">
 						<div class="user-options__inner">
 							<div class="user-option__icon">
 								<div class="basket-counter">1</div>
