--- a/src/automatic-news.html
+++ b/src/automatic-news.html
@@ -81,7 +81,7 @@
 										</div>
 									</div>
 								</a>
-								<a href="#" class="user-options__item">
+								<a href="automatic-basket.html" class="user-options__item">
 									<div class="user-options__inner">
 										<div class="user-option__icon">
 											<div class="basket-counter">1</div>
@@ -437,7 +437,7 @@
 							</div>
 						</div>
 					</a>
-					<a href="#" class="user-options__item">
+					<a href="automatic-basket.html" class="user-options__item">
 						<div class="user-options__inner">
 							<div class="user-option__icon">
 								<div class="basket-counter">1</div>
@@ -466,7 +466,7 @@
 										<ul class="breadcrumbs__list">
 											<li><a href="#"><span title="Главная">Главная</span></a></li>
 											<li><a href="#"><span title="Каталог">Каталог</span></a></li>
-											<li><span title="Кабельно-проводниковая продукция и кабеленесущие системы">Кабельно-проводниковая продукция и кабеленесущие системы</span></li>
+											<li><span title="Новости">Новости</span></li>
 										</ul>
 									</div>
 									<!--breadcrumbs end-->
