--- a/src/__automatic-catalog.html
+++ b/src/__automatic-catalog.html
@@ -25,7 +25,9 @@
 						<div class="sheet">
 							<div class="layout-article">
 								<!--breadcrumbs-->
-								@@include('_breadcrumbs.tpl')
+								@@include('_breadcrumbs.tpl', {
+								"last": "Кабельно-проводниковая продукция и кабеленесущие системы"
+								})
 								<!--breadcrumbs end-->
 								<div class="heading">
 									<h1>Кабельно-проводниковая продукция и кабеленесущие системы</h1>
