--- a/src/__automatic-products.html
+++ b/src/__automatic-products.html
@@ -25,7 +25,9 @@
 						<div class="sheet">
 							<div class="layout-article">
 								<!--breadcrumbs-->
-								@@include('_breadcrumbs.tpl')
+								@@include('_breadcrumbs.tpl', {
+									"last": "2Кабель силовой бронированный АВБбШв и ААБл"
+								})
 								<!--breadcrumbs end-->
 								<h1>2Кабель силовой бронированный АВБбШв и ААБл</h1>
 								<!--filters-->
