--- a/src/__news-inner.html
+++ b/src/__news-inner.html
@@ -24,7 +24,9 @@
 						<div class="sheet">
 							<div class="layout-article">
 								<!--breadcrumbs-->
-								@@include('_breadcrumbs.tpl')
+								@@include('_breadcrumbs.tpl', {
+									"last": "Теперь мы партнеры завода по производству трансформаторов ТМГ"
+								})
 								<!--breadcrumbs end-->
 								<div class="heading">
 									<h1>Теперь мы партнеры завода по производству трансформаторов ТМГ</h1>
