--- a/src/__typography.html
+++ b/src/__typography.html
@@ -26,7 +26,9 @@
 							<div class="layout-article">
 								<!--breadcrumbs-->
 								<div class="layout-text">
-									@@include('_breadcrumbs.tpl')
+									@@include('_breadcrumbs.tpl', {
+										"last": "Типографика в вебдизайне. Основные понятия и положения"
+									})
 								</div>
 								<!--breadcrumbs end-->
 
