--- a/src/news-inner.html
+++ b/src/news-inner.html
@@ -466,7 +466,7 @@
 										<ul class="breadcrumbs__list">
 											<li><a href="#"><span title="Главная">Главная</span></a></li>
 											<li><a href="#"><span title="Каталог">Каталог</span></a></li>
-											<li><span title="Кабельно-проводниковая продукция и кабеленесущие системы">Кабельно-проводниковая продукция и кабеленесущие системы</span></li>
+											<li><span title="Теперь мы партнеры завода по производству трансформаторов ТМГ">Теперь мы партнеры завода по производству трансформаторов ТМГ</span></li>
 										</ul>
 									</div>
 									<!--breadcrumbs end-->
