--- a/src/typography.html
+++ b/src/typography.html
@@ -467,7 +467,7 @@
 											<ul class="breadcrumbs__list">
 												<li><a href="#"><span title="Главная">Главная</span></a></li>
 												<li><a href="#"><span title="Каталог">Каталог</span></a></li>
-												<li><span title="Кабельно-проводниковая продукция и кабеленесущие системы">Кабельно-проводниковая продукция и кабеленесущие системы</span></li>
+												<li><span title="Типографика в вебдизайне. Основные понятия и положения">Типографика в вебдизайне. Основные понятия и положения</span></li>
 											</ul>
 										</div>
 									</div>
