--- a/src/__automatic-typography.html
+++ b/src/__automatic-typography.html
@@ -27,38 +27,38 @@
 								<!--breadcrumbs-->
 								<div class="layout-text">
 									@@include('_breadcrumbs.tpl', {
-										"last": "Типографика в вебдизайне. Основные понятия и положения"
+									"last": "Типографика в вебдизайне. Основные понятия и положения"
 									})
 								</div>
 								<!--breadcrumbs end-->
 
 								<!--heading-->
 								@@include('_typography_components.tpl', {
-									"heading": "add"
+								"component": "heading"
 								})
 								<!--heading end-->
 
 								<!--datetime-->
 								@@include('_typography_components.tpl', {
-									"dateTime": "add"
+								"component": "dateTime"
 								})
 								<!--datetime end-->
 
 								<!--entry-text-->
 								@@include('_typography_components.tpl', {
-									"entryText": "add"
+								"component": "entryText"
 								})
 								<!--entry-text end-->
 
 								<!--paragraphs-->
 								@@include('_typography_components.tpl', {
-									"paragraphs": "add"
+								"component": "paragraphs"
 								})
 								<!--paragraphs end-->
 
 								<!--h2-h6-->
 								@@include('_typography_components.tpl', {
-									"h2h6": "add"
+								"component": "h2h6"
 								})
 								<!--h2-h6 end-->
 
@@ -66,7 +66,7 @@
 
 								<!--font style-->
 								@@include('_typography_components.tpl', {
-									"fontStyle": "add"
+								"component": "fontStyle"
 								})
 								<!--font style end-->
 
@@ -74,19 +74,19 @@
 
 								<!--list ul-->
 								@@include('_typography_components.tpl', {
-									"listUl": "add"
+								"component": "listUl"
 								})
 								<!--list ul end-->
 
 								<!--list ol-->
 								@@include('_typography_components.tpl', {
-									"listOl": "add"
+								"component": "listOl"
 								})
 								<!--list ol end-->
 
 								<!--list mix-->
 								@@include('_typography_components.tpl', {
-									"listMix": "add"
+								"component": "listMix"
 								})
 								<!--list mix end-->
 
@@ -95,13 +95,13 @@
 
 								<!--blockquote-->
 								@@include('_typography_components.tpl', {
-									"blockquote": "add"
+								"component": "blockquote"
 								})
 								<!--blockquote end-->
 
 								<!--table styling-->
 								@@include('_typography_components.tpl', {
-									"tableStyling": "add"
+								"component": "tableStyling"
 								})
 								<!--table styling end-->
 
@@ -109,25 +109,25 @@
 
 								<!--table default-->
 								@@include('_typography_components.tpl', {
-									"tableDefault": "add"
+								"component": "tableDefault"
 								})
 								<!--table default end-->
 
 								<!--files-->
 								@@include('_typography_components.tpl', {
-									"files": "add"
+								"component": "files"
 								})
 								<!--files end-->
 
 								<!--files-important-->
 								@@include('_typography_components.tpl', {
-									"filesImportant": "add"
+								"component": "filesImportant"
 								})
 								<!--files-important end-->
 
 								<!--style default button-->
 								@@include('_typography_components.tpl', {
-									"buttons": "add"
+								"component": "buttons"
 								})
 								<!--style default button end-->
 
@@ -135,7 +135,7 @@
 
 								<!--form-default-->
 								@@include('_typography_components.tpl', {
-									"formDefault": "add"
+								"component": "formDefault"
 								})
 								<!--form-default end-->
 
@@ -143,7 +143,7 @@
 
 								<!--selects-->
 								@@include('_typography_components.tpl', {
-									"select": "add"
+								"component": "select"
 								})
 								<!--selects end-->
 
@@ -151,7 +151,7 @@
 
 								<!--light-form-->
 								@@include('_typography_components.tpl', {
-									"formLight": "add"
+								"component": "formLight"
 								})
 								<!--light-form end-->
 
@@ -159,19 +159,19 @@
 
 								<!--checkbox and radio-->
 								@@include('_typography_components.tpl', {
-									"checkboxRadio": "add"
+								"component": "checkboxRadio"
 								})
 								<!--checkbox and radio end-->
 
 								<!--user form-->
 								@@include('_typography_components.tpl', {
-									"userForm": "add"
+								"component": "userForm"
 								})
 								<!--user form end-->
 
 								<!--columnize-->
 								@@include('_typography_components.tpl', {
-									"columnize": "add"
+								"component": "columnize"
 								})
 								<!--columnize end-->
 
@@ -179,7 +179,7 @@
 
 								<!--accordion-->
 								@@include('_typography_components.tpl', {
-									"accordion": "add"
+								"component": "accordion"
 								})
 								<!--accordion end-->
 
@@ -187,7 +187,7 @@
 
 								<!--images align-->
 								@@include('_typography_components.tpl', {
-									"imagesAlign": "add"
+								"component": "imagesAlign"
 								})
 								<!--images align end-->
 
@@ -195,7 +195,7 @@
 
 								<!--entry-img-->
 								@@include('_typography_components.tpl', {
-									"entryImage": "add"
+								"component": "entryImage"
 								})
 								<!--entry-img end-->
 
@@ -204,7 +204,7 @@
 
 								<!--images-slider-->
 								@@include('_typography_components.tpl', {
-									"imagesSlider": "add"
+								"component": "imagesSlider"
 								})
 								<!--images-slider end-->
 
@@ -212,14 +212,14 @@
 
 								<!--search-page-->
 								@@include('_typography_components.tpl', {
-									"searchPage": "add"
+								"component": "searchPage"
 								})
 								<!--search-page end-->
 
 								<!--separator--><hr>
 								<!--feature-list-->
 								@@include('_typography_components.tpl', {
-									"featureList": "add"
+								"component": "featureList"
 								})
 								<!--feature-list end-->
 
@@ -231,7 +231,7 @@
 
 								<!--article-footer-->
 								@@include('_typography_components.tpl', {
-									"articleFooter": "add"
+								"component": "articleFooter"
 								})
 								<!--article-footer end-->
 
@@ -270,7 +270,7 @@
 
 										a.innerHTML = elem[i].closest('h4, h3').textContent.trim();
 										if(elem[i].closest('h4')){
-	//										elem[i].closest('h4').setAttribute("class", "blah");
+											//										elem[i].closest('h4').setAttribute("class", "blah");
 											li.className = 'navigationByTypographySubItem';
 										}
 										a.setAttribute('href', '#' + elem[i].id);
