--- a/src/all-pages.html
+++ b/src/all-pages.html
@@ -477,6 +477,7 @@
 										<li><a href="automatic-card.html" target="_blank"><span>Карточка товара</span></a></li>
 										<li><a href="automatic-news.html" target="_blank"><span>Список новостей</span></a></li>
 										<li><a href="automatic-news-inner.html" target="_blank"><span>Новостная текстовая</span></a></li>
+										<li><a href="automatic-basket.html" target="_blank"><span>Корзина</span></a></li>
 									</ul>
 									<h2><span class="mark">Общие</span></h2>
 									<ul>
