--- a/src/__all-pages.html
+++ b/src/__all-pages.html
@@ -44,6 +44,7 @@
 									<li><a href="automatic-news.html" target="_blank"><span>Список новостей</span></a></li>
 									<li><a href="automatic-news-inner.html" target="_blank"><span>Новостная текстовая</span></a></li>
 									<li><a href="automatic-basket.html" target="_blank"><span>Корзина</span></a></li>
+									<li><a href="automatic-personal.html" target="_blank"><span>Личный кабинет</span></a></li>
 								</ul>
 
 								<h2><span class="mark">Общие</span></h2>
