--- a/src/__automatic-basket.html
+++ b/src/__automatic-basket.html
@@ -51,9 +51,9 @@
 										<section class="products-basket__list">
 											<header class="products-basket__item products-basket__head">
 												<div class="products-basket__cell products-basket__product">Наименование</div>
-												<div class="products-basket__cell products-basket__price">Цена, руб</div>
+												<div class="products-basket__cell products-basket__price">Цена, руб.</div>
 												<div class="products-basket__cell products-basket__amount">Количество, шт.</div>
-												<div class="products-basket__cell products-basket__sum">Сумма, руб</div>
+												<div class="products-basket__cell products-basket__sum">Сумма, руб.</div>
 												<div class="products-basket__cell products-basket__remove">&nbsp;</div>
 											</header>
 											@@loop("_tpl_basket-items.tpl", "includes-json/_tpl_basket-items.json")
@@ -61,7 +61,7 @@
 									</div>
 									<div class="product-basket__total">
 										<div class="label">Итого:</div>
-										<div class="total-price">2 400 р. (без НДС)</div>
+										<div class="total-price">84 937 руб. (без НДС)</div>
 									</div>
 									<div class="product-basket__footer">
 										<div class="arr-wrap">
