--- a/src/automatic-basket.html
+++ b/src/automatic-basket.html
@@ -492,9 +492,9 @@
 											<section class="products-basket__list">
 												<header class="products-basket__item products-basket__head">
 													<div class="products-basket__cell products-basket__product">Наименование</div>
-													<div class="products-basket__cell products-basket__price">Цена, руб</div>
+													<div class="products-basket__cell products-basket__price">Цена, руб.</div>
 													<div class="products-basket__cell products-basket__amount">Количество, шт.</div>
-													<div class="products-basket__cell products-basket__sum">Сумма, руб</div>
+													<div class="products-basket__cell products-basket__sum">Сумма, руб.</div>
 													<div class="products-basket__cell products-basket__remove">&nbsp;</div>
 												</header>
 												<article class="products-basket__item">
@@ -606,7 +606,7 @@
 										</div>
 										<div class="product-basket__total">
 											<div class="label">Итого:</div>
-											<div class="total-price">2 400 р. (без НДС)</div>
+											<div class="total-price">84 937 руб. (без НДС)</div>
 										</div>
 										<div class="product-basket__footer">
 											<div class="arr-wrap">
