--- a/src/__automatic-card.html
+++ b/src/__automatic-card.html
@@ -33,6 +33,140 @@
 									<!--product card-->
 									@@include('_tpl_product-card.xhtml')
 									<!--product card end-->
+
+									<!--card overview-->
+									<div class="infobar p-card-overview js-tabs" data-collapsed="true">
+										<div class="infobar__nav">
+											<a href="#p-card-overview-01" class="infobar__tab js-tab-anchor active-tab">
+												<span>Основные параметры предназначен для соединения изолированного</span>
+											</a>
+											<a href="#p-card-overview-02" class="infobar__tab js-tab-anchor">
+												<span>Описание</span>
+											</a>
+											<a href="#p-card-overview-03" class="infobar__tab js-tab-anchor">
+												<span>Аналоги</span>
+											</a>
+											<a href="#p-card-overview-04" class="infobar__tab js-tab-anchor">
+												<span>Схожие товары</span>
+											</a>
+										</div>
+
+										<div class="infobar__panels js-tab-container">
+											<a href="#p-card-overview-01" class="infobar__tab js-tab-link">
+												<span>Основные параметры предназначен для соединения изолированного</span>
+												<i>&nbsp;</i>
+											</a>
+											<div class="infobar__panel js-tab-content" id="p-card-overview-01">
+												<div class="infobar__frame">
+													<div class="table-auto">
+														<table class="tbl tbl-resp infobar-tbl">
+															<thead>
+																<tr class="tbl-resp--head">
+																	<th class="tbl-resp--hide">Наименование параметра</th>
+																	<th class="tbl-resp--grid-col-6 tbl-resp--title">Единица измерения</th>
+																	<th class="tbl-resp--grid-col-6 tbl-resp--title">Значение</th>
+																</tr>
+															</thead>
+															<tbody>
+																<tr>
+																	<td class="tbl-resp--subtitle">Номинальное напряжение на стороне ВН</td>
+																	<td class="tbl-resp--grid-col-6">кВ</td>
+																	<td class="tbl-resp--grid-col-6">6;10</td>
+																</tr>
+																<tr>
+																	<td class="tbl-resp--subtitle">Наибольшее напряжение на стороне ВН</td>
+																	<td class="tbl-resp--grid-col-6">кА/с</td>
+																	<td class="tbl-resp--grid-col-6">25;40;63;100</td>
+																</tr>
+																<tr>
+																	<td class="tbl-resp--subtitle">Мощность силового трансформатора</td>
+																	<td class="tbl-resp--grid-col-6">кВ</td>
+																	<td class="tbl-resp--grid-col-6">6;10</td>
+																</tr>
+																<tr>
+																	<td class="tbl-resp--subtitle">Номинальный ток на стороне ВН для присоединения линий</td>
+																	<td class="tbl-resp--grid-col-6">кА/с</td>
+																	<td class="tbl-resp--grid-col-6">25;40;63;100</td>
+																</tr>
+																<tr>
+																	<td class="tbl-resp--subtitle">Номинальное напряжение на стороне ВН</td>
+																	<td class="tbl-resp--grid-col-6">кА/с</td>
+																	<td class="tbl-resp--grid-col-6">25;40;63;100</td>
+																</tr>
+																<tr>
+																	<td class="tbl-resp--subtitle">Номинальное напряжение на стороне ВН</td>
+																	<td class="tbl-resp--grid-col-6">кВ</td>
+																	<td class="tbl-resp--grid-col-6">6;10</td>
+																</tr>
+																<tr>
+																	<td class="tbl-resp--subtitle">Используемые аппараты: РВ; ВН; вакуумные выключатели VF, Evolis, Sion, BB/TEL и т.д.; рубильники РБ, РЕ, ВР и т.д.; выключатели ВА, Siemens, Schneider Electric, АВВ и другие</td>
+																	<td class="tbl-resp--grid-col-6">кА/с</td>
+																	<td class="tbl-resp--grid-col-6">25;40;63;100</td>
+																</tr>
+																<tr>
+																	<td class="tbl-resp--subtitle">Наибольшее напряжение на стороне ВН</td>
+																	<td class="tbl-resp--grid-col-6">кА/с</td>
+																	<td class="tbl-resp--grid-col-6">25;40;63;100</td>
+																</tr>
+																<tr>
+																	<td class="tbl-resp--subtitle">Мощность силового трансформатора</td>
+																	<td class="tbl-resp--grid-col-6">кВ</td>
+																	<td class="tbl-resp--grid-col-6">6;10</td>
+																</tr>
+																<tr>
+																	<td class="tbl-resp--subtitle">Номинальный ток на стороне ВН для присоединения линий</td>
+																	<td class="tbl-resp--grid-col-6">кА/с</td>
+																	<td class="tbl-resp--grid-col-6">25;40;63;100</td>
+																</tr>
+															</tbody>
+														</table>
+													</div>
+												</div>
+											</div>
+											<a href="#p-card-overview-02" class="infobar__tab js-tab-link">
+												<span>Описание</span>
+												<i>&nbsp;</i>
+											</a>
+											<div class="infobar__panel js-tab-content" id="p-card-overview-02">
+												<div class="infobar__frame">
+													<h3>Применение:</h3>
+													<p>Резьбовой крепежный элемент РКн (наружная резьба) предназначен для соединения изолированного металлорукава с установочной коробкой и герметичного соединение изолированного отрезков металлорукава путем стыковки с ответным элементом РКв (внутренняя резьба).</p>
+													<p>Крепежный элемент РКнХ (наружная резьба и хомут) предназначен для соединение неизолированного металлорукава с установочной коробкой и соединение отрезков неизолированного и изолированного металлорукава путем стыковки с ответным элементом РКв</p>
+													<h3>Материалы:</h3>
+													<p>Цинковый сплав</p>
+													<h3>Преимущества:</h3>
+													<ul>
+														<li>Простота монтажа</li>
+														<li>Надежное соединение отрезков металлорукава</li>
+														<li>Дополнительное уплотнение ввода в распределительный щит или установочную коробку</li>
+														<li>Герметичное соединения при стыковке изолированного металлорукава с использованием муфт Ркв и РКн (Степень защиты IP 54)</li>
+														<li>Индивидуальная упаковка со штрих-кодом для удобства реализации через розничные сети</li>
+													</ul>
+												</div>
+											</div>
+											<a href="#p-card-overview-03" class="infobar__tab js-tab-link">
+												<span>Аналоги</span>
+												<i>&nbsp;</i>
+											</a>
+											<div class="infobar__panel js-tab-content" id="p-card-overview-03">
+												<div class="infobar__frame">
+													<h3>Надежное соединение отрезков металлорукава</h3>
+													<p>Крепежный элемент РКнХ (наружная резьба и хомут) предназначен для соединение неизолированного металлорукава с установочной коробкой и соединение отрезков неизолированного и изолированного металлорукава путем стыковки с ответным элементом РКв</p>
+												</div>
+											</div>
+											<a href="#p-card-overview-04" class="infobar__tab js-tab-link">
+												<span>Схожие товары</span>
+												<i>&nbsp;</i>
+											</a>
+											<div class="infobar__panel js-tab-content" id="p-card-overview-04">
+												<div class="infobar__frame">
+													<h3>Преимущества</h3>
+													<p>Резьбовой крепежный элемент РКн (наружная резьба) предназначен для соединения изолированного металлорукава с установочной коробкой и герметичного соединение изолированного отрезков металлорукава путем стыковки с ответным элементом РКв (внутренняя резьба).</p>
+												</div>
+											</div>
+										</div>
+									</div>
+									<!--card overview end-->
 								</div>
 							</div>
 						</div>
