--- a/src/automatic-catalog.html
+++ b/src/automatic-catalog.html
@@ -382,7 +382,7 @@
 							<div class="logo-alt-map__fig"><span>Владивосток</span></div>
 						</div>
 					</a>
-					<img style="display: none;" src="img/logo.png" alt="Электроавтоматика">
+					<img style="display: none;" src="img/logo-print--ea.png" alt="Электроавтоматика">
 				</div>
 				<a href="#" class="menu-btn btn-nav-js" title="Открыть главное меню">
 					<div class="menu-btn__inner">
@@ -3245,7 +3245,7 @@
 	<!--Map-->
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnFqiG7GVEuZZeE5XCILGj1Tqz1KOMye8&sensor=false&extension=.js&language=ru"></script>
 	<script src="js/jquery.min.js"></script>
-	<script src="js/libs.js"></script>
+	<script src="js/libs.min.js"></script>
 	<script src="js/common.js"></script>
 </body>
 
