--- a/src/automatic-catalog.html
+++ b/src/automatic-catalog.html
@@ -374,7 +374,7 @@
 		<aside class="top-panel">
 			<div class="top-panel-holder">
 				<div class="logo-alt">
-					<a href="automatic-catalog.html">
+					<a href="automatic-index.html">
 						<div class="logo-alt-title">
 							<div class="logo-alt-title__fig"><span>Электроавтоматика</span></div>
 						</div>
