--- a/src/index.html
+++ b/src/index.html
@@ -447,7 +447,7 @@
 						</div>
 					</a>
 				</div>
-				<a href="automatic-catalog.html" class="btn-siblings"><i>&nbsp;</i><span>Электро<br> автоматика</span></a>
+				<a href="automatic-index.html" class="btn-siblings"><i>&nbsp;</i><span>Электро<br> автоматика</span></a>
 			</div>
 			<a href="catalog.html" class="btn-catalog btn-catalog-js"><span>Каталог</span></a>
 		</aside>
